[project]
name = "spaceshooter"
version = "0.1.0"
description = "A Space Shooter game built with Python and Pygame"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["game", "pygame", "space", "shooter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Arcade",
]

dependencies = [
    "pygame>=2.6.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "termcolor>=2.4.0",
]

[project.scripts]
space-shooter = "game:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game.py", "sprites.py", "menu.py"]

[tool.hatch.envs.default]
python = "3.11"
